# python-zhmcclient

./: .bandit.toml  .codeclimate.yml  .coveragerc  .coveragerc.end2end  .flake8  .gitignore  .mailmap  .pylintrc  .readthedocs.yaml  .ruff.toml  .safety-policy-all.yml  .safety-policy-develop.yml  .safety-policy-install.yml  .safety-policy.yml  .travis.yml  .whitesource  AUTHORS  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ChangeLog  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  appveyor.yml  base-requirements.txt  dev-requirements.txt  extra-testutils-requirements.txt  minimum-constraints-develop.txt  minimum-constraints-install.txt  minimum-constraints.txt  provision.sh  pyproject.toml  pytest.ini  remove_duplicate_setuptools.py  renovate.json  requirements-base.txt  requirements-develop.txt  (+5 more)
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backport.yml  debug_create_branch.yml  notify.yml  publish.yml  release_pr.yml  test.yml  tests390.yml
changes/: 1134.feature.1.rst  1134.feature.2.rst  1134.feature.3.rst  1247.feature.rst  1248.feature.rst  1309.feature.rst  1431.feature.rst  1451.feature.rst  1459.fix.rst  1473.fix.rst  1483.fix.rst  1485.feature.2.rst  1485.feature.3.rst  1485.feature.rst  1489.cleanup.rst  1490.incompatible.rst  1498.feature.rst  1499.cleanup.rst  1499.notshown.rst  1502.feature.rst  1502.incompatible.rst  1503.cleanup.rst  1505.feature.rst  1506.feature.rst  1511.feature.rst  1516.bugfix.rst  1526.feature.rst  1527.feature.rst  1532.cleanup.rst  1532.feature.rst  1533.feature.rst  1541.feature.rst  1542.cleanup.rst  1543.feature.rst  1543.fix.rst  1544.fix.rst  1548.fix.rst  1559.notshown.2.rst  1559.notshown.3.rst  1559.notshown.rst  (+194 more)
design/: dpm-storage-model.rst  fake-client.rst  fakedsession.md  hipersocket-changes-z16.md  lpar-status.md  network-errors.rst
docs/: appendix.rst  changes.rst  cli.rst  concepts.rst  conf.py  development.rst  general.rst  index.rst  intro.rst  logging.rst  mocksupport.rst  notifications.rst  operations.rst  resources.rst  security.rst  tutorial.rst
docs/_static/: basic.css  classic.css
docs/notebooks/: 01_notebook_basics.ipynb  02_connections.ipynb  03_datamodel.ipynb  04_error_handling.ipynb  connections.ipynb  datamodel.ipynb  tututils.py
examples/: .gitignore  activation_profiles.py  adapter_port_vswitch.py  api_version.py  async_operation_notification.py  async_operation_polling.py  cleanup_test_partitions.py  cpcdata.py  cpcinfo.py  discover_storage_group.py  dpmConfigUtil.py  dump_hmc_definition.py  example0.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example_hmc_inventory.yaml  example_hmc_vault.yaml  example_hmccreds.yaml  example_mocked_z13_classic.yaml  example_mocked_z13_dpm.yaml  example_mocked_z16_classic.yaml  example_mocked_z16_dpm.yaml  export_dpm_config.py  find_cpcs.py  get_inventory.py  get_partial_and_full_properties.py  get_partition_properties_filter.py  get_sustainability_data.py  hipersocket_lifecycle.py  increase_crypto_config.py  install_from_ftp.py  jms_notifications.py  list_attached_partition_links.py  list_cpc_and_lpar.py  (+17 more)
examples/cli/: crud_partition.sh  example_zhmcrc.sh
tests/: _test_template.py  example_hmc_definitions.yaml  faked_hmc1.yaml  faked_z13_classic.yaml  faked_z13_dpm.yaml  test_activation_profile.py  test_adapter.py  test_client.py  test_cpc.py  test_exceptions.py  test_hba.py  test_logging.py  test_lpar.py  test_nic.py  test_partition.py  test_port.py  test_resource.py  test_session.py  test_timestats.py  test_virtual_function.py  test_virtual_switch.py
tests/common/: http_mocked_fixtures.py  utils.py
tests/end2end/: conftest.py  mocked_hmc_z14.yaml  mocked_hmc_z16.yaml  mocked_hmc_z17.yaml  mocked_inventory.yaml  mocked_vault.yaml  test__import_local.py  test_activation_profile.py  test_activation_profiles.py  test_adapter.py  test_auto_update.py  test_capacity_group.py  test_certificates.py  test_console.py  test_cpc.py  test_group.py  test_hba.py  test_hmc_credentials_file.py  test_hmc_definition_file.py  test_hmc_definitions.py  test_hmc_inventory.py  test_hw_message.py  test_ldap_server_definition.py  test_lpar.py  test_mfa_server_definition.py  test_nic.py  test_partition.py  test_partition_lifecycle.py  test_partition_link.py  test_password_rule.py  test_port.py  test_resource_auto_update.py  test_sso_server_definition.py  test_storage_fabric.py  test_storage_group.py  test_storage_group_template.py  test_storage_site.py  test_storage_volume.py  test_storage_volume_template.py  test_tape_library.py  (+10 more)
tests/function/: README.md  _hmcinfo.py  conftest.py  create_hmcinfo.py  example_config.yaml  run_hmcinfo.py  test_activation_profiles.py  test_common_unicode.yaml  (+5 more)
tools/: check_blanked.py  cpcdata  cpcinfo
vagrant/: Vagrantfile  provision.sh
zhmccli/: __init__.py  _cmd_adapter.py  _cmd_client.py  _cmd_cpc.py  _cmd_hba.py  _cmd_helper.py  _cmd_info.py  _cmd_lpar.py  _cmd_metrics.py  _cmd_nic.py  _cmd_partition.py  _cmd_port.py  _cmd_session.py  _cmd_vfunction.py  _cmd_vswitch.py  _helper.py  zhmccli.py
zhmcclient/: __init__.py  _activation_profile.py  _adapter.py  _auto_updater.py  _capacity_group.py  _certificates.py  _client.py  _console.py  _constants.py  _cpc.py  _debug_info.py  _exceptions.py  _group.py  _hba.py  _hw_message.py  _ldap_server_definition.py  _logging.py  _lpar.py  _manager.py  _metrics.py  _mfa_server_definition.py  _nic.py  _notification.py  _os_console.py  _partition.py  _partition_link.py  _password_rule.py  _port.py  _resource.py  _resource_updater.py  _session.py  _sso_server_definition.py  _storage_fabric.py  _storage_group.py  _storage_group_template.py  _storage_site.py  _storage_volume.py  _storage_volume_template.py  _tape_library.py  _tape_link.py  (+16 more)
zhmcclient_mock/: __init__.py  _hmc.py  _idpool.py  _session.py  _urihandler.py
zhmcsh/: README.zhmcsh  zhmcpart  zhmcsh.py
zhmcwsclient/: __init__.py  client.py  cpc.py  exceptions.py  lpar.py  manager.py  session.py  version.py
(+114 files in other folders)
