
[metadata]
name = zhmcclient
summary = Client library for z Systems Hardware Management Console Web Services API
description-file =
    README.rst
license = Apache License, Version 2.0
author = z Systems KVM OpenStack Team
author-email = leopold@de.ibm.com
home-page = https://github.rtp.raleigh.ibm.com/openstack-zkvm/python-zhmcclient
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    zhmcclient

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]
ignore =
    # unable to detect undefined names (when using wildcard import)
    F403
exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    build_doc,
    dist
