
[metadata]
name = zhmcclient
summary = A pure Python client library for the z Systems HMC Web Services API.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Juergen Leopold, Andreas Maier
author-email = leopoldj@de.ibm.com, maiera@de.ibm.com
maintainer = Juergen Leopold, Andreas Maier
maintainer-email = leopoldj@de.ibm.com, maiera@de.ibm.com
home-page = https://github.com/zhmcclient/python-zhmcclient
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    zhmcclient
    zhmccli
scripts =
    tools/cpcinfo
    tools/cpcdata

[entry_points]
console_scripts =
    zhmc = zhmccli.zhmccli:cli

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]
ignore =
    # unable to detect undefined names (when using wildcard import)
    F403
exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    build_doc,
    dist
